objects/ChargentBase__Payment_Source__c.object
<CustomObject>
    <description>Store all the details that are not gateway specific. All data on these records will be valid across any Chargent Order and any related Token record.</description>
    <fields>
        <fullName>ChargentBase__Account_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Holder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Sources</relationshipLabel>
        <relationshipName>Payment_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Account_Last_4__c</fullName>
        <label>Account Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Bank_Account_Number__c</fullName>
        <description>The unique identification number for the specific account at the financial institution that the payer is using to facilitate payments.</description>
        <inlineHelpText>Please enter the Bank Account number without spaces or dashes.</inlineHelpText>
        <label>Bank Account Number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Banking_Institution_Name__c</fullName>
        <description>The name on the bank account, typically a first and last name, or company name for business accounts.</description>
        <inlineHelpText>The name on the bank account, typically a first and last name, or company name for business accounts.</inlineHelpText>
        <label>Banking Institution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__PaymentSourceKey__c</fullName>
        <externalId>true</externalId>
        <label>PaymentSourceKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ChargentBase__Routing_Number__c</fullName>
        <description>This is the string of numbers that identifies a financial institution.

This value is called by different names on different systems and in different countries. E.g., SWIFT, IBAN, BIC, Bank Code, BSB, Routing Number</description>
        <inlineHelpText>Please enter the bank ID number with no spaces or dashes.

Goes by many names: SWIFT, IBAN, BIC, Bank Code, BSB or Routing Number</inlineHelpText>
        <label>Routing Number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify this record as a valid payment source.</description>
        <inlineHelpText>Identify this record as a valid payment source.</inlineHelpText>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Validated_On__c</fullName>
        <label>Validated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Validation_Method__c</fullName>
        <label>Validation Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Validation_Response__c</fullName>
        <label>Validation Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Payment Source</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>